fix(ui/select): fix dark mode colors

--- a/app/react/components/form-components/ReactSelect.css
+++ b/app/react/components/form-components/ReactSelect.css
@@ -1,13 +1,16 @@
 .portainer-selector-root {
   --multi-value-tag-bg: var(--grey-51);
+  --single-value-option-text-color: currentColor;
 }
 
 :root[theme='dark'] .portainer-selector-root {
   --multi-value-tag-bg: var(--grey-3);
+  --single-value-option-text-color: var(--white-color);
 }
 
 :root[theme='highcontrast'] .portainer-selector-root {
   --multi-value-tag-bg: var(--grey-3);
+  --single-value-option-text-color: var(--white-color);
 }
 
 /* input style */
@@ -35,6 +38,11 @@
   @apply th-highcontrast:text-white;
 }
 
+.portainer-selector-root .portainer-selector__single-value {
+  color: var(--single-value-option-text-color);
+}
+
+/* Menu colors */
 .portainer-selector__menu {
   --bg-multiselect-color: var(--white-color);
   --border-multiselect: var(--grey-48);
@@ -43,8 +51,6 @@
   --focused-option-color: currentColor;
 
   --selected-option-text-color: var(--grey-7);
-
-  --single-value-option-text-color: currentColor;
 }
 
 :root[theme='dark'] .portainer-selector__menu {
@@ -55,8 +61,6 @@
   --focused-option-color: var(--white-color);
 
   --selected-option-text-color: var(--grey-7);
-
-  --single-value-option-text-color: var(--white-color);
 }
 :root[theme='highcontrast'] .portainer-selector__menu {
   --bg-multiselect-color: var(--black-color);
@@ -66,32 +70,31 @@
   --focused-option-color: var(--white-color);
 
   --selected-option-text-color: var(--grey-7);
-
-  --single-value-option-text-color: var(--white-color);
 }
 
-.portainer-selector__menu {
+.portainer-selector__menu-portal .portainer-selector__menu,
+.portainer-selector-root .portainer-selector__menu {
   background-color: var(--bg-multiselect-color);
   border: 1px solid var(--border-multiselect);
   padding: 5px;
   z-index: 10;
 }
 
-.portainer-selector__menu .portainer-selector__option {
+.portainer-selector__menu-portal .portainer-selector__menu .portainer-selector__option,
+.portainer-selector-root .portainer-selector__menu .portainer-selector__option {
   background-color: var(--bg-multiselect-color);
   border-radius: 5px;
 }
 
-.portainer-selector__menu .portainer-selector__option:active,
-.portainer-selector__menu .portainer-selector__option--is-focused {
+.portainer-selector__menu-portal .portainer-selector__menu .portainer-selector__option:active,
+.portainer-selector__menu-portal .portainer-selector__menu .portainer-selector__option--is-focused,
+.portainer-selector-root .portainer-selector__menu .portainer-selector__option:active,
+.portainer-selector-root .portainer-selector__menu .portainer-selector__option--is-focused {
   background-color: var(--focused-option-bg);
   color: var(--focused-option-color);
 }
 
-.portainer-selector__menu .portainer-selector__option--is-selected {
+.portainer-selector__menu-portal .portainer-selector__menu .portainer-selector__option--is-selected,
+.portainer-selector-root .portainer-selector__menu .portainer-selector__option--is-selected {
   color: var(--selected-option-text-color);
-}
-
-.portainer-selector-root .portainer-selector__single-value {
-  color: var(--single-value-option-text-color);
 }
